Fixed sizing of donate button on smaller screens, also highlighting

--- a/login/style/base.css
+++ b/login/style/base.css
@@ -65,7 +65,7 @@ select {
 
 input[type="submit"] {
     text-align: center;
-    width: 33%;
+    width: 310px;
     display: block;
     margin: 10px auto;
     border-radius: 20px;
@@ -75,6 +75,7 @@ input[type="submit"] {
     color: white;
     cursor: pointer;
     font-size: 1.4em;
+    outline: none;
 }
 input[type="submit"]:hover {
     background-color: #252a30;
